@@ -1,10 +1,10 @@
 DEFINED_PHASES=configure prepare
 DESCRIPTION=A perfect hash function generator
 EAPI=4
-HOMEPAGE=http://www.gnu.org/software/gperf/gperf.html
+HOMEPAGE=http://www.gnu.org/software/gperf/
 KEYWORDS=alpha amd64 arm arm64 hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~ppc-aix ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~x86-interix ~amd64-linux ~arm-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
 LICENSE=GPL-2
 SLOT=0
 SRC_URI=mirror://gnu/gperf/gperf-3.0.4.tar.gz
 _eclasses_=multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4
-_md5_=37cab10117ce72a8aa047b061f34943c
+_md5_=6e73acd655e74acaa01eef84639797f7
