@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/tuned
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/tuned/ChangeLog,v 1.3 2015/07/14 09:23:46 dlan Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/tuned/ChangeLog,v 1.4 2015/08/07 03:11:11 dlan Exp $
+
+*tuned-2.5.1 (07 Aug 2015)
+
+  07 Aug 2015; Yixun Lan <dlan@gentoo.org> +tuned-2.5.1.ebuild:
+  version bump
 
 *tuned-2.5.0 (14 Jul 2015)
 
