@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/gperf
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gperf/ChangeLog,v 1.58 2014/06/06 16:07:32 vapier Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gperf/ChangeLog,v 1.59 2015/08/07 03:25:00 vapier Exp $
+
+  07 Aug 2015; Mike Frysinger <vapier@gentoo.org> gperf-3.0.4.ebuild:
+  Use simpler HOMEPAGE.
 
   06 Jun 2014; Mike Frysinger <vapier@gentoo.org> gperf-3.0.4.ebuild:
   Add arm64 love.
